# apronmcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  wrangler.jsonc
.github/workflows/: ci.yml
cloudflare/: worker.ts
docs/superpowers/discovery/: 2026-06-16-booking-flow.md
docs/superpowers/plans/: 2026-06-15-paperless141-mcp.md  2026-06-16-reservation-writes-w1.md  2026-07-03-cloudflare-containers-deploy.md
docs/superpowers/specs/: 2026-06-15-paperless141-mcp-design.md  2026-06-16-reservation-write-capabilities-design.md  2026-07-03-cloudflare-containers-deploy-design.md
src/apronmcp/: __init__.py  config.py  recon.py  server.py  writes.py
src/apronmcp/parsers/: __init__.py  account.py  availability.py
src/paperless141_mcp/: browser.py  client.py  config.py  recon.py  server.py  session.py  tools.py
src/paperless141_mcp/parsers/: _common.py  availability.py  confirmation.py  my_schedule.py
tests/: test_client.py  test_config.py  test_server_transport.py  test_session.py  test_tools.py  test_writes.py
tests/fixtures/: account_sample.html  availability_sample.html  booking_confirmation_sample.html  my_schedule_sample.html
tests/parsers/: test_account.py  test_availability.py  test_confirmation.py  test_my_schedule.py
